--- a/www/index.html
+++ b/www/index.html
@@ -56,20 +56,29 @@ td {
 
 <div id='fanjara' style='position:relative; overflow:hidden; width:400px; height:600px;'>
 	<!--                                          zeda meniu -->
-	<div style='position:fixed; left:0px; top:0px; width:100%; height:100px; background-color:#ffce00; z-index:211; padding-top:20px;'>
+	<div style='position:fixed; left:0px; top:0px; width:100%; height:100px; background-color:#ffce00; z-index:211; '>
+		
 		<a style='float:left; margin-top:7px; margin-left: 7px;' href='Javascript: show_settings();'><img src='resources/settings_1.png' height=30px></a>
       
 	<!--									mimartulebis asarchevebi-->
 		<div id='input_boxes'>
 			<table width=100%>
-				<Tr>
+				<!--<Tr>
 					<td style='color:Black;' align=center><b>დაწყება</b></td>
-					<td style='color:Black;' align=center><b>დასრულება</b></td>
-				</tr>
+					
+				</tr>-->
 
 				<Tr>
-					<td align=center><input id="pac-input" type="text" placeholder="საწყისი მისამართი"  onfocus='setState(0);' onclick='this.select();' ></td>
-					<td  align=center><input id="pac-input2" type="text" placeholder="დანიშნულების მისამართი"  onfocus='setState(1);' onclick='this.select();'></td>
+					<td align=center>
+						<input id="pac-input" type="text" placeholder="საწყისი მისამართი"  onfocus='setState(0);' onclick='this.select();' style='width:100%; font-size:14px;'>
+					</td> 
+				</tr>
+<!--				<td>
+					<td style='color:Black;' align=center><b>დასრულება</b></td>
+				</tr>-->
+				<tr>
+					<td  align=center><input id="pac-input2" type="text" placeholder="დანიშნულების მისამართი"  onfocus='setState(1);' onclick='this.select();' style='width:100%; font-size:14px;'>
+					</td>
 				</tr>
 			</table>
 		</div>
@@ -113,11 +122,11 @@ td {
 
 		<div id='driver_info' style='position:fixed; bottom:30px; left:15%; height:120px; width:200px; z-index:252; color:black; background-color:white; padding:10px; border:1px solid gray; display:none;'></div>
 
-		<a id='call_but' style='position:fixed; bottom:30px; left:80px; height:100px; width:210px; z-index:252;' href='Javascript: call_taxi();'><img src='resources/gamodzaxeba.svg' style='width:210px; height:100px;'></a>
+		<a id='call_but' style='position:fixed; bottom:0px; left:80px; height:100px; width:210px; z-index:252;' href='Javascript: call_taxi();'><img src='resources/gamodzaxeba.svg' style='width:210px; height:100px;'></a>
 
 		<a href='Javascript: setme();' style='position:fixed; bottom:60px; right:5px; margin:5px; z-index:252; '><img id='cbut' src='resources/center.svg' style='width:50px; height:50px;'></a>
 
-		<div id="bottom_menu" style=' width:210px; position:fixed; bottom:0px; left:80px; height:31px; z-index:251; background-color:#ffce00; '>
+		<div id="bottom_menu" style=' width:210px; position:fixed; bottom:0px; left:80px; height:31px; z-index:251; background-color:#ffce00; display:none;'>
 			<div id='info_text' name='info_text' style=' float:right; color:white; padding:5px; '></div>
 		</div>
 	</div>
@@ -137,7 +146,7 @@ td {
 	<div id='settings_sheet'  style='visibility:hidden; position:absolute; left:0px; top:0px; width:100%;'>
 		<table width=100%>
 			<tr>
-			<td width=80% background='black;' style='color:white; padding:10px;'>
+			<td width=80% bgcolor='black' style='color:white; padding:10px;'>
 				<br>
 				<div id='mydiv'></div>
 				<br>
