--- a/www/index.html
+++ b/www/index.html
@@ -33,8 +33,8 @@
     color: white;
   }
 
-#pac-input{width:174px;  border:1px solid #13ae48;  border-radius:4px;padding:3px; background-color:white; color:black;}
-#pac-input2{width:174px;  border:1px solid #ecac00; border-radius:4px;padding:3px;background-color:white; color:black;}
+#pac-input{width:174px;  border:1px solid #13ae48;  border-radius:4px;padding:4px;margin:0px; background-color:white; color:black;}
+#pac-input2{width:174px;  border:1px solid #ecac00; border-radius:4px;padding:4px;margin:0px;background-color:white; color:black;}
 
 #pac-input2:focus {
     background-color:#e8b427; 
@@ -53,7 +53,18 @@ td {
 }
 </style>
 <body bgcolor=#e3b202>
+<script>
+function sel_green()
+{
+document.getElementById("pac-input").focus();
+}
 
+function sel_orange()
+{
+document.getElementById("pac-input2").focus();
+}
+
+</script>
 <div id='fanjara' style='position:relative; overflow:hidden; width:400px; height:600px;'>
 	<!--                                          zeda meniu -->
 	<div style='position:fixed; left:0px; top:0px; width:100%; height:100px; background-color:#ffce00; z-index:211; '>
@@ -68,16 +79,17 @@ td {
 					
 				</tr>-->
 
-				<Tr>
-					<td align=center>
-						<input id="pac-input" type="text" placeholder="საწყისი მისამართი"  onfocus='setState(0);' onclick='this.select();' style='width:100%; font-size:14px;'>
+				<Tr><td><a href='Javascript:sel_green();'><img src='arr_green.png'></a></td>
+					<td align=left>
+						<input id="pac-input" type="text" placeholder="საწყისი მისამართი"  onfocus='setState(0);' onclick='this.select();' style='width:300px; font-size:14px;'>
 					</td> 
 				</tr>
 <!--				<td>
 					<td style='color:Black;' align=center><b>დასრულება</b></td>
 				</tr>-->
 				<tr>
-					<td  align=center><input id="pac-input2" type="text" placeholder="დანიშნულების მისამართი"  onfocus='setState(1);' onclick='this.select();' style='width:100%; font-size:14px;'>
+				<td><a href='Javascript:sel_orange();'><img src='arr_orange.png'></a></td>
+					<td  align=left><input id="pac-input2" type="text" placeholder="დანიშნულების მისამართი"  onfocus='setState(1);' onclick='this.select();' style='width:300px; font-size:14px;'>
 					</td>
 				</tr>
 			</table>
@@ -124,7 +136,7 @@ td {
 
 		<a id='call_but' style='position:fixed; bottom:0px; left:80px; height:100px; width:210px; z-index:252;' href='Javascript: call_taxi();'><img src='resources/gamodzaxeba.svg' style='width:210px; height:100px;'></a>
 
-		<a href='Javascript: setme();' style='position:fixed; bottom:60px; right:5px; margin:5px; z-index:252; '><img id='cbut' src='resources/center.svg' style='width:50px; height:50px;'></a>
+		<a href='Javascript: setme();' style='position:fixed; bottom:65px; right:5px; margin:5px; z-index:252; '><img id='cbut' src='resources/center.svg' style='width:50px; height:50px;'></a>
 
 		<div id="bottom_menu" style=' width:210px; position:fixed; bottom:0px; left:80px; height:31px; z-index:251; background-color:#ffce00; display:none;'>
 			<div id='info_text' name='info_text' style=' float:right; color:white; padding:5px; '></div>
