--- a/www/index.html
+++ b/www/index.html
@@ -53,18 +53,7 @@ td {
 }
 </style>
 <body bgcolor=#e3b202>
-<script>
-function sel_green()
-{
-document.getElementById("pac-input").focus();
-}
 
-function sel_orange()
-{
-document.getElementById("pac-input2").focus();
-}
-
-</script>
 <div id='fanjara' style='position:relative; overflow:hidden; width:400px; height:600px;'>
 	<!--                                          zeda meniu -->
 	<div style='position:fixed; left:0px; top:0px; width:100%; height:100px; background-color:#ffce00; z-index:211; '>
@@ -79,7 +68,7 @@ document.getElementById("pac-input2").focus();
 					
 				</tr>-->
 
-				<Tr><td><a href='Javascript:sel_green();'><img src='arr_green.png'></a></td>
+				<Tr><td><a href='Javascript:sel_green();'><img src='resources/arr_green.png'></a></td>
 					<td align=left>
 						<input id="pac-input" type="text" placeholder="საწყისი მისამართი"  onfocus='setState(0);' onclick='this.select();' style='width:300px; font-size:14px;'>
 					</td> 
@@ -88,7 +77,7 @@ document.getElementById("pac-input2").focus();
 					<td style='color:Black;' align=center><b>დასრულება</b></td>
 				</tr>-->
 				<tr>
-				<td><a href='Javascript:sel_orange();'><img src='arr_orange.png'></a></td>
+				<td><a href='Javascript:sel_orange();'><img src='resources/arr_orange.png'></a></td>
 					<td  align=left><input id="pac-input2" type="text" placeholder="დანიშნულების მისამართი"  onfocus='setState(1);' onclick='this.select();' style='width:300px; font-size:14px;'>
 					</td>
 				</tr>
