--- a/www/index.html
+++ b/www/index.html
@@ -70,7 +70,7 @@ td {
 
 				<Tr><td><a href='Javascript:sel_green();'><img src='resources/arr_green.png'></a></td>
 					<td align=left>
-						<input id="pac-input" type="text" placeholder="საწყისი მისამართი"  onfocus='setState(0);' onclick='this.select();' style='width:300px; font-size:14px;'>
+						<input id="pac-input" type="text" placeholder="საწყისი მისამართი"  onfocus='setState(0);' onclick='this.select();' style='width:310px; font-size:14px;'>
 					</td> 
 				</tr>
 <!--				<td>
@@ -78,10 +78,16 @@ td {
 				</tr>-->
 				<tr>
 				<td><a href='Javascript:sel_orange();'><img src='resources/arr_orange.png'></a></td>
-					<td  align=left><input id="pac-input2" type="text" placeholder="დანიშნულების მისამართი"  onfocus='setState(1);' onclick='this.select();' style='width:300px; font-size:14px;'>
+					<td  align=left><input id="pac-input2" type="text" placeholder="დანიშნულების მისამართი"  onfocus='setState(1);' onclick='this.select();' style='width:310px; font-size:14px;'>
 					</td>
 				</tr>
 			</table>
+		</div>
+
+		<div id='on_call_menu'>
+			<center>
+			<a href='Javascript: cancel_call();' style='background-color:#c72322; padding:10px; border-radius:20px;'>გაუქმება</a>
+			</center>
 		</div>
 	</div>
 
