--- a/www/index.html
+++ b/www/index.html
@@ -84,7 +84,8 @@ td {
 			</table>
 		</div>
 
-		<div id='on_call_menu'>
+		<div id='on_call_menu' style='display:none;'>
+		<Br><br>
 			<center>
 			<a href='Javascript: cancel_call();' style='background-color:#c72322; padding:10px; border-radius:20px;'>გაუქმება</a>
 			</center>
