--- a/www/index.html
+++ b/www/index.html
@@ -128,7 +128,7 @@ td {
 
 		<div id='dirinfo' style='color:black; background-color:white; padding:10px;'></div>
 
-		<div id='driver_info' style='position:fixed; bottom:30px; left:15%; height:120px; width:200px; z-index:252; color:black; background-color:white; padding:10px; border:1px solid gray; display:none;'></div>
+		<div id='driver_info' style='position:fixed; bottom:30px; left:15%; height:120px; width:200px; z-index:252; color:black; background-color:white; padding:10px; box-shadow: 5px 10px; display:none;'></div>
 
 		<a id='call_but' style='position:fixed; bottom:0px; left:80px; height:100px; width:210px; z-index:252;' href='Javascript: call_taxi();'><img src='resources/gamodzaxeba.svg' style='width:210px; height:100px;'></a>
 
