--- a/www/index.html
+++ b/www/index.html
@@ -56,7 +56,7 @@ td {
 
 <div id='fanjara' style='position:relative; overflow:hidden; width:400px; height:600px;'>
 	<!--                                          zeda meniu -->
-	<div style='position:fixed; left:0px; top:0px; width:100%; height:100px; background-color:#ffce00; z-index:211; '>
+	<div style='position:fixed; left:0px; top:0px; width:100%; height:105px; background-color:#ffce00; z-index:211; '>
 		
 		<a style='float:left; margin-top:7px; margin-left: 7px;' href='Javascript: show_settings();'><img src='resources/settings_1.png' height=30px></a>
       
@@ -85,9 +85,9 @@ td {
 		</div>
 
 		<div id='on_call_menu' style='display:none;'>
-		<Br><br>
+		<Br><br><br>
 			<center>
-			<a href='Javascript: cancel_call();' style='background-color:#c72322; padding:10px; border-radius:20px;'>გაუქმება</a>
+			<a href='Javascript: cancel_call();' style='background-color:#c72322; padding:10px; padding-left:20px; padding-right:20px; border-radius:20px;'>გაუქმება</a>
 			</center>
 		</div>
 	</div>
