--- a/www/index.html
+++ b/www/index.html
@@ -130,6 +130,29 @@ td {
 
 		<div id='driver_info' style='position:fixed; bottom:30px; left:15%; height:120px; width:200px; z-index:252; color:gray; background-color:white; padding:10px; box-shadow: 4px 4px 23px 0px rgba(0,0,0,0.75); display:none; border-radius:5px;'></div>
 
+
+<div id='end_screen' style='position:fixed; bottom:30px; left:15%; height:150px; width:200px; z-index:252; color:gray; background-color:white; padding:10px; box-shadow: 4px 4px 23px 0px rgba(0,0,0,0.75); display:none; border-radius:5px;'>
+<Center><a href='card_pay();'>ბარათით გადახდა</a></center><Br><Br>
+<div id='end_info'></div>
+
+<center><a href='close_end_info();' style='border:1px solid gray; border-radius:3px; padding:10px;'>OK</a>
+
+</div>
+
+<Script>
+function card_pay()
+	{
+	window.open('http://taxiprius.com.ge/barati_req.php?tanxa='+tanxa+"&unid="+myid, '_system');
+	}
+
+function close_end_info()
+	{
+	tanxa=0;
+	document.getElementById("end_screen").style.display="none";
+
+	}
+</script>
+
 		<a id='call_but' style='position:fixed; bottom:0px; left:80px; height:100px; width:210px; z-index:252;' href='Javascript: call_taxi();'><img src='resources/gamodzaxeba.svg' style='width:210px; height:100px;'></a>
 
 		<a href='Javascript: setme();' style='position:fixed; bottom:65px; right:5px; margin:5px; z-index:252; '><img id='cbut' src='resources/center.svg' style='width:50px; height:50px;'></a>
