--- a/www/index.html
+++ b/www/index.html
@@ -131,7 +131,7 @@ td {
 		<div id='driver_info' style='position:fixed; bottom:30px; left:15%; height:120px; width:200px; z-index:252; color:gray; background-color:white; padding:10px; box-shadow: 4px 4px 23px 0px rgba(0,0,0,0.75); display:none; border-radius:5px;'></div>
 
 
-<div id='end_screen' style='position:fixed; bottom:100px; left:15%; height:150px; width:200px; z-index:252; color:gray; background-color:white; padding:10px; box-shadow: 4px 4px 23px 0px rgba(0,0,0,0.75); display:none; border-radius:5px;'>
+<div id='end_screen' style='position:fixed; bottom:100px; left:15%; height:180px; width:200px; z-index:252; color:gray; background-color:white; padding:10px; box-shadow: 4px 4px 23px 0px rgba(0,0,0,0.75); display:none; border-radius:5px;'>
 <Center><a href='Javascript: card_pay();' style='background-color:blue; border-radius:3px; padding:5px; color:white;'>ბარათით გადახდა</a></center><Br>
 <div id='end_info'></div>
 
@@ -142,7 +142,7 @@ td {
 <Script>
 function card_pay()
 	{
-	window.open('http://taxiprius.com.ge/banki_req.php?tanxa='+tanxa+"&unid="+myid, '_system');
+	window.open('http://taxiprius.com.ge/bank_req.php?tanxa='+tanxa+"&unid="+myid, '_system');
 	}
 
 function close_end_info()
