--- a/www/index.html
+++ b/www/index.html
@@ -104,15 +104,12 @@ td {
 		</div>
 		
 		<!--							taxi mosulia ekrani -->
-	    <div id='arrived_screen'  style='display:none; position:fixed; top:50px; left:0px;  width:400px; height:620px; z-index:300; background-color:#e3b202; color:white; '>
-			<br><br><br><br><br><br><br><br><br><br><br>
+	    <div id='arrived_screen'  style='display:none; position:fixed; top:200px; left:10%;  width:80%; height:200px; z-index:300; background-color:white; color:black;; '>
+			<br>
 			<center>თქვენი ტაქსი ადგილზეა<br><Br>
 			<a href='javascript: chamovdivar();' style='color:white; background-color:green; padding:10px; text-align:center; '>ჩამოვდივარ</a>
 			</center>
-			<br><br>
-			<center>
-			<div id='taxi_number' style='color:white;'></div>
-			</center>
+			
 	    </div>
 
 		
