--- a/www/index.html
+++ b/www/index.html
@@ -125,7 +125,7 @@ td {
 
 		<div id='dirinfo' style='color:black; background-color:white; padding:10px;'></div>
 
-		<div id='driver_info' style='position:fixed; bottom:30px; left:15%; height:120px; width:200px; z-index:252; color:gray; background-color:white; padding:10px; box-shadow: 4px 4px 23px 0px rgba(0,0,0,0.75); display:none; border-radius:5px;'></div>
+		<div id='driver_info' style='position:fixed; bottom:30px; left:10%; height:120px; width:80%; z-index:252; color:gray; background-color:white; padding:10px; box-shadow: 4px 4px 23px 0px rgba(0,0,0,0.75); display:none; border-radius:10px;'></div>
 
 
 		<div id='end_screen' style='position:fixed; bottom:100px; left:15%; height:200px; width:200px; z-index:252; color:gray; background-color:white; padding:10px; box-shadow: 4px 4px 23px 0px rgba(0,0,0,0.75); display:none; border-radius:5px;'>
@@ -153,7 +153,7 @@ function close_end_info()
 
 		<a id='call_but' style='position:fixed; bottom:0px; left:80px; height:100px; width:210px; z-index:252;' href='Javascript: call_taxi();'><img src='resources/gamodzaxeba.svg' style='width:210px; height:100px;'></a>
 
-		<a href='Javascript: setme();' style='position:fixed; bottom:65px; right:5px; margin:5px; z-index:252; '><img id='cbut' src='resources/center.svg' style='width:50px; height:50px;'></a>
+		<a href='Javascript: setme();' style='position:fixed; bottom:10px; right:5px; margin:5px; z-index:252; '><img id='cbut' src='resources/center.svg' style='width:50px; height:50px;'></a>
 
 		<div id="bottom_menu" style=' width:210px; position:fixed; bottom:0px; left:80px; height:31px; z-index:251; background-color:#ffce00; display:none;'>
 			<div id='info_text' name='info_text' style=' float:right; color:white; padding:5px; '></div>
