--- a/www/index.html
+++ b/www/index.html
@@ -172,17 +172,15 @@ function close_end_info()
 	</div>
 
 
-	<div id='settings_sheet'  style='visibility:hidden; position:absolute; left:0px; top:0px; width:100%;'>
-		<table width=100%>
-			<tr>
-			<td width=80% bgcolor='black' style='color:white; padding:10px;'>
+	<div id='settings_sheet'  style='visibility:hidden; position:absolute; left:10%; top:180px; width:80%; background-color:white; color:gray; box-shadow: 4px 4px 23px 0px rgba(0,0,0,0.75); display:none; border-radius:5px; '>
+		
 				<br>
 				<div id='mydiv'></div>
 				<br>
-				<p id="geopos" style='display:none;'>Finding geolocation...</p>
+			<!--	<p id="geopos" style='display:none;'>Finding geolocation...</p>
 				<br><br><br><Br><br>
 
-				<div id='erorebi' style='display:none;'>Tilebi (zoom:16)</div>
+				<div id='erorebi' style='display:none;'>Tilebi (zoom:16)</div>-->
 
 				<center>
 				<b>პროფილი</b>
@@ -212,15 +210,11 @@ function close_end_info()
 				<br>
 
 
-				<a href='Javascript: show_map();' style='background-color:white; border:1px solid gray; display:block; width:150px; color:black; padding:5px; '>უკან
-				დაბრუნება</a>
+				<a href='Javascript: show_map();' style='background-color:white; border:1px solid gray; display:block; width:150px; color:black; padding:5px; '>დახურვა</a>
 				</center>
-			</td>
-			<td onclick='show_map();'>
 
-			</td>
-			</tr>
-		</table>
+
+			
 	</div>
 </div>
 
