--- a/www/index.html
+++ b/www/index.html
@@ -172,7 +172,7 @@ function close_end_info()
 	</div>
 
 
-	<div id='settings_sheet'  style='visibility:hidden; position:absolute; left:10%; top:180px; width:80%; background-color:white; color:gray; box-shadow: 4px 4px 23px 0px rgba(0,0,0,0.75); display:none; border-radius:5px; z-index:10000;'>
+	<div id='settings_sheet'  style=' position:absolute; left:10%; top:180px; width:80%; background-color:white; color:gray; box-shadow: 4px 4px 23px 0px rgba(0,0,0,0.75); display:none; border-radius:5px; z-index:10000;'>
 		
 				<br>
 				<div id='mydiv'></div>
