--- a/www/index.html
+++ b/www/index.html
@@ -197,7 +197,7 @@ function close_end_info()
 						</td>
 					</tr>
 					<tr>
-						<td colspan=2><a href='Javascript: saveuser();' style='background-color:white; border:1px solid gray; display:block; width:150px; color:black; padding:5px;'>შესვლა</a>
+						<td colspan=2 align=center><a href='Javascript: saveuser();' style='background-color:white; border:1px solid gray; display:block; color:black; padding:5px; font-size:14px;'>შესვლა</a>
 						</td>
 					  </tr>
 					</table>
