--- a/www/index.html
+++ b/www/index.html
@@ -205,7 +205,7 @@ function close_end_info()
 					<a href='#' onclick="window.open('http://taxiprius.com.ge/user_reg.php', '_system');" style='background-color:white; border:1px solid gray; display:block; width:150px; color:black; padding:5px;'>რეგისტრაცია</a>
 				</div>
 
-				<div id='loggedin_page' style='width:355px; display:none;'>
+				<div id='loggedin_page' style=' display:none;'>
 					<div id='loggedin_info'></div>
 					<a href='Javascript: logout();' style='background-color:white; border:1px solid gray; display:block; width:150px; color:black; padding:5px;'>გამოსვლა</a>
 				</div>
