--- a/www/index.html
+++ b/www/index.html
@@ -3,8 +3,8 @@
 <meta http-equiv="Content-Security-Policy"
       content="img-src * 'self' data:; default-src *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://maps.googleapis.com https://fonts.googleapis.com">
 
-
-<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+<meta name="viewport" content="width=365, initial-scale=1.0, user-scalable=no, maximum-scale=1.0, minimum-scale=0.1,  minimal-ui, height=620">
+<!--<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">-->
 <head>
 
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
@@ -113,14 +113,16 @@ td {
 	    </div>
 
 		
-		<div id='GPS_search_screen' style='display:inline; position:fixed; top:0px; left:0px;  width:365px; height:650px; z-index:301; background-color:#e3b202; color:white; '>
-			<br><br><br><br><br><br><br><br>
-			<center><img src='resources/taxi_icon.png'><br><br>... მიმდინარეობს თქვენი ლოკაციის დადგენა ...</center>
+		<div id='GPS_search_screen'  style='display:inline; position:fixed; top:200px; left:10%;  width:80%; height:120px; z-index:300; background-color:white; color:black; border-radius:10px; box-shadow: 4px 4px 23px 0px rgba(0,0,0,0.75); '>
+			<br>
+			<center><img src='resources/taxi_icon.png'><br><br>მიმდინარეობს თქვენი ლოკაციის დადგენა</center>
+			<Br>
 		</div>
 
-		<div id='taxi_search_screen' style='display:none; position:fixed; top:0px; left:0px;  width:365px; height:650px; z-index:302; background-color:#e3b202; color:white; '>
-			<br><br><br><br><br><br><br><br>
-			<center><img src='resources/taxi_icon.png'><br><br>... უახლოესი თავისუფალი ტაქსის ძიება ...</center>
+		<div id='taxi_search_screen'  style='display:none; position:fixed; top:200px; left:10%;  width:80%; height:120px; z-index:300; background-color:white; color:black; border-radius:10px; box-shadow: 4px 4px 23px 0px rgba(0,0,0,0.75); '>
+			<br>
+			<center>უახლოესი თავისუფალი ტაქსის ძიება</center>
+			<Br>
 		</div>
 
 		<div id='dirinfo' style='color:black; background-color:white; padding:10px;'></div>
