--- a/www/index.html
+++ b/www/index.html
@@ -106,7 +106,7 @@ td {
 	    </div>
 
 		
-		<div id='GPS_search_screen'  style='display:inline; position:fixed; top:200px; left:10%;  width:80%; height:120px; z-index:300; background-color:white; color:black; border-radius:10px; box-shadow: 4px 4px 23px 0px rgba(0,0,0,0.75); '>
+		<div id='GPS_search_screen'  style='display:inline; position:fixed; top:200px; left:10%;  width:80%; z-index:300; background-color:white; color:black; border-radius:10px; box-shadow: 4px 4px 23px 0px rgba(0,0,0,0.75); '>
 			<br>
 			<center><img src='resources/taxi_icon.png'><br><br>მიმდინარეობს თქვენი ლოკაციის დადგენა</center>
 			<Br>
