--- a/www/index.html
+++ b/www/index.html
@@ -24,7 +24,8 @@
 </head>
 <style>
   body {
-    color: white;
+  background-color:white;
+    color: black;
     margin: 0px;
     padding: 0px;
   }
@@ -53,24 +54,25 @@ td {
   font-size: 10px;
 }
 </style>
-<body bgcolor=#e3b202>
+<body>
 <!-- width:370px; height:620px;-->
 <div id='fanjara' style='position:relative; overflow:hidden; width:100%; height:100%;'>
 	<!--                                          zeda meniu -->
-	<div style='position:fixed; left:0px; top:0px; width:100%; height:110px;  z-index:211; '><!--background-color:#ffce00;-->
+	<div style='position:fixed; left:0px; top:0px; width:100%; border:1px solid red; z-index:211; '><!--background-color:#ffce00;-->
 		
-		<a style='float:left; margin-top:7px; margin-left: 7px; margin-right:7px;' href='Javascript: show_settings();'><img src='resources/settings_1.png' height=30px></a>
+		<a style='float:left; padding:7px; background-color:white; width:10%;' href='Javascript: show_settings();'><img src='resources/settings_1.png' height=30px></a>
       
 	<!--									mimartulebis asarchevebi-->
-		<div id='input_boxes' style='float:left;'>
+		<div id='input_boxes' style='float:left; width:90%;'>
 			<table width=100% cellspacing=0 cellpadding=0 border=0;>
-				<Tr><td><a href='Javascript:sel_green();'><img src='resources/arr_green.png'></a></td>
+				<Tr>
+				<!--<td><a href='Javascript:sel_green();'><img src='resources/arr_green.png'></a></td>-->
 					<td align=left>
 						<input id="pac-input" type="text" placeholder="საწყისი მისამართი"  onfocus='setState(0);' onclick='this.select();' style='width:80%; font-size:14px; padding:10px;'>
 					</td> 
 				</tr>
 				<tr>
-				<td><a href='Javascript:sel_orange();'><img src='resources/arr_orange.png'></a></td>
+				<!--<td><a href='Javascript:sel_orange();'><img src='resources/arr_orange.png'></a></td>-->
 					<td  align=left><input id="pac-input2" type="text" placeholder="დანიშნულების მისამართი"  onfocus='setState(1);' onclick='this.select();' style='width:80%; font-size:14px; padding:10px;'>
 					</td>
 				</tr>
