--- a/www/index.html
+++ b/www/index.html
@@ -35,8 +35,8 @@
     color: white;
   }
 
-#pac-input{width:174px;  border:1px solid #13ae48;  border-radius:4px;padding:4px;margin:0px; background-color:white; color:black;}
-#pac-input2{width:174px;  border:1px solid #ecac00; border-radius:4px;padding:4px;margin:0px;background-color:white; color:black;}
+#pac-input{  border:2px solid #13ae48;  border-radius:4px;padding:4px;margin:0px; background-color:white; color:black;}
+#pac-input2{  border:2px solid #ecac00; border-radius:4px;padding:4px;margin:0px;background-color:white; color:black;}
 
 #pac-input2:focus {
     background-color:#e8b427; 
@@ -60,20 +60,20 @@ td {
 	<!--                                          zeda meniu -->
 	<div style='position:fixed; left:0px; top:0px; width:100%; border:1px solid red; z-index:211; '><!--background-color:#ffce00;-->
 		
-		<a style='float:left; padding:7px; background-color:white; width:10%;' href='Javascript: show_settings();'><img src='resources/settings_1.png' height=30px></a>
+		<a style='float:left; padding:7px; background-color:white; width:10%; border:1px solid green;' href='Javascript: show_settings();'><img src='resources/settings_1.png' height=30px></a>
       
 	<!--									mimartulebis asarchevebi-->
-		<div id='input_boxes' style='float:left; width:90%;'>
+		<div id='input_boxes' style='float:left; width:89%;'>
 			<table width=100% cellspacing=0 cellpadding=0 border=0;>
 				<Tr>
 				<!--<td><a href='Javascript:sel_green();'><img src='resources/arr_green.png'></a></td>-->
 					<td align=left>
-						<input id="pac-input" type="text" placeholder="საწყისი მისამართი"  onfocus='setState(0);' onclick='this.select();' style='width:80%; font-size:14px; padding:10px;'>
+						<input id="pac-input" type="text" placeholder="საწყისი მისამართი"  onfocus='setState(0);' onclick='this.select();' style='width:100%; font-size:14px; padding:10px;'>
 					</td> 
 				</tr>
 				<tr>
 				<!--<td><a href='Javascript:sel_orange();'><img src='resources/arr_orange.png'></a></td>-->
-					<td  align=left><input id="pac-input2" type="text" placeholder="დანიშნულების მისამართი"  onfocus='setState(1);' onclick='this.select();' style='width:80%; font-size:14px; padding:10px;'>
+					<td  align=left><input id="pac-input2" type="text" placeholder="დანიშნულების მისამართი"  onfocus='setState(1);' onclick='this.select();' style='width:width:100%; font-size:14px; padding:10px;'>
 					</td>
 				</tr>
 			</table>
