--- a/www/index.html
+++ b/www/index.html
@@ -58,15 +58,15 @@ td {
 <!-- width:370px; height:620px;-->
 <div id='fanjara' style='position:relative; overflow:hidden; width:100%; height:100%;'>
 	<!--                                          zeda meniu -->
-	<div style='position:fixed; left:0px; top:0px; width:100%; border:1px solid red; z-index:211; '><!--background-color:#ffce00;-->
+	<div style='position:fixed;box-shadow: rgba(0, 0, 0, 0.75) 0px 4px 23px 0px;left:0px;top:0px;width:100%; z-index:211; '><!--background-color:#ffce00;-->
 		
-		<a style='float:left; padding:7px; background-color:white;  border:1px solid green;' href='Javascript: show_settings();'><img src='resources/settings_1.png' height=30px></a>
+		<a style='float:left;padding:7px;background-color:white;display: block;height: 57px;width: 8%;' href='Javascript: show_settings();'><img src='resources/settings_1.png' height=30px></a>
       
 	<!--									mimartulebis asarchevebi-->
 		<div id='input_boxes' style='float:left; '>
 
-			<input id="pac-input" type="text" placeholder="საწყისი მისამართი"  onfocus='setState(0);' onclick='this.select();' style='width:100%; font-size:14px; padding:10px;'>				
-			<input id="pac-input2" type="text" placeholder="დანიშნულების მისამართი"  onfocus='setState(1);' onclick='this.select();' style='width:100%; font-size:14px; padding:10px;'>
+			<input id="pac-input" type="text" placeholder="საწყისი მისამართი"  onfocus='setState(0);' onclick='this.select();' style='width: 96%;font-size:14px;padding:10px;'>				
+			<input id="pac-input2" type="text" placeholder="დანიშნულების მისამართი"  onfocus='setState(1);' onclick='this.select();' style='width: 96%;font-size:14px;padding:10px;'>
 		</div>
 
 		<div id='on_call_menu' style='display:none; background-color:white; float:left; width:90%;'>
