--- a/www/index.html
+++ b/www/index.html
@@ -60,7 +60,7 @@ td {
 	<!--                                          zeda meniu -->
 	<div style='position:fixed;box-shadow: rgba(0, 0, 0, 0.75) 0px 4px 23px 0px;left:0px;top:0px;width:100%; z-index:211; '><!--background-color:#ffce00;-->
 		
-		<a style='float:left;padding:7px;background-color:white;display: block;height: 57px;width: 8%;' href='Javascript: show_settings();'><img src='resources/settings_1.png' height=30px></a>
+		<a style='float:left;padding:7px;background-color:white;display: block;height: 57px;width: 8%;' href='Javascript: show_settings();'><img src='resources/settings.svg' height=30px></a>
       
 	<!--									mimartulebis asarchevebi-->
 		<div id='input_boxes' style='float:left; '>
