--- a/www/index.html
+++ b/www/index.html
@@ -58,7 +58,7 @@ td {
 <!-- width:370px; height:620px;-->
 <div id='fanjara' style='position:relative; overflow:hidden; width:100%; height:100%;'>
 	<!--                                          zeda meniu -->
-	<div style='position:fixed;box-shadow: rgba(0, 0, 0, 0.75) 0px 4px 23px 0px;left:0px;top:0px;width:100%; z-index:211; '><!--background-color:#ffce00;-->
+	<div style='position:fixed;box-shadow: rgba(0, 0, 0, 0.75) 0px 4px 23px 0px;left:0px;top:0px;width:100%; z-index:211; background-color:white;'><!--background-color:#ffce00;-->
 		
 		<a style='float:left;padding:7px;background-color:white;display: block;height: 57px;width: ' href='Javascript: show_settings();'><img src='resources/settings.svg' height=30px></a>
       
