--- a/www/index.html
+++ b/www/index.html
@@ -89,9 +89,9 @@ td {
 		</div>
 		
 		<!--							taxi mosulia ekrani -->
-	    <div id='arrived_screen'  style='display:none; position:fixed; top:200px; left:10%;  width:80%; height:120px; z-index:300; background-color:white; color:black; border-radius:10px; box-shadow: 4px 4px 23px 0px rgba(0,0,0,0.75); '>
+	    <div id='arrived_screen'  style='display:none; position:fixed; top:200px; left:10%;  width:80%;  z-index:300; background-color:white; color:black; border-radius:10px; box-shadow: 4px 4px 23px 0px rgba(0,0,0,0.75); '>
 			<br>
-			<center>თქვენი ტაქსი ადგილზეა<br><Br>
+			<center><img src='resources/taxi_icon.png'><br><br>თქვენი ტაქსი ადგილზეა<br><Br>
 			<a href='javascript: chamovdivar();' style='color:white; background-color:green; padding:10px; text-align:center; '>ჩამოვდივარ</a>
 			</center>
 			
@@ -104,9 +104,9 @@ td {
 			<Br>
 		</div>
 
-		<div id='taxi_search_screen'  style='display:none; position:fixed; top:200px; left:10%;  width:80%; height:120px; z-index:300; background-color:white; color:black; border-radius:10px; box-shadow: 4px 4px 23px 0px rgba(0,0,0,0.75); '>
+		<div id='taxi_search_screen'  style='display:none; position:fixed; top:200px; left:10%;  width:80%; z-index:300; background-color:white; color:black; border-radius:10px; box-shadow: 4px 4px 23px 0px rgba(0,0,0,0.75); '>
 			<br>
-			<center>უახლოესი თავისუფალი ტაქსის ძიება</center>
+			<center><img src='resources/taxi_icon.png'><br><br>უახლოესი თავისუფალი ტაქსის ძიება</center>
 			<Br>
 		</div>
 
