--- a/www/index.html
+++ b/www/index.html
@@ -128,7 +128,7 @@ td {
 <Script>
 function card_pay()
 	{
-	window.open('http://taxiprius.com.ge/bank_req.php?tanxa='+tanxa+"&unid="+myid, '_system');
+	window.open('http://taxiprius.com.ge/bank_req.php?tanxa='+tanxa+"&unid="+myid, '_blank', 'location=yes');
 	}
 
 function close_end_info()
