--- a/www/index.html
+++ b/www/index.html
@@ -190,7 +190,7 @@ function close_end_info()
 					  </tr>
 					</table>
 					<Br><br>
-					<a href='#' onclick="window.open('http://taxiprius.com.ge/user_reg.php', '_system');" style='background-color:white; border:1px solid gray; display:block; width:150px; color:black; padding:5px;'>რეგისტრაცია</a>
+					<a href='#' onclick="window.open('http://taxiprius.com.ge/user_reg.php',  '_blank', 'location=yes');" style='background-color:white; border:1px solid gray; display:block; width:150px; color:black; padding:5px;'>რეგისტრაცია</a>
 				</div>
 
 				<div id='loggedin_page' style=' display:none;'>
