--- a/www/index.html
+++ b/www/index.html
@@ -61,13 +61,13 @@ td {
 	<div style='position:fixed;box-shadow: rgba(0, 0, 0, 0.75) 0px 4px 23px 0px;left:0px;top:0px;width:100%; z-index:211; background-color:white;'><!--background-color:#ffce00;-->
 	<div style='width:100%; height:15px;'></div>
 		
-		<a style='float:left;padding:7px;background-color:white;display: block;height: 57px; ' href='Javascript: show_settings();'><img src='resources/settings.svg' height=30px></a>
+		<a style='float:left;padding:7px;background-color:white;display: block;height: 57px; margin-top:13px; ' href='Javascript: show_settings();'><img src='resources/settings.svg' height=30px></a>
       
 	<!--									mimartulebis asarchevebi-->
 		<div id='input_boxes' style='float:left; width:81%;'>
 
-			<input id="pac-input" type="text" placeholder="საწყისი მისამართი"  onfocus='setState(0);' onclick='this.select();' style='width: 100%;font-size:14px;padding:10px;'>				
-			<input id="pac-input2" type="text" placeholder="დანიშნულების მისამართი"  onfocus='setState(1);' onclick='this.select();' style='width: 100%;font-size:14px;padding:10px;'>
+			<input id="pac-input" type="text" placeholder="საწყისი მისამართი"  onfocus='setState(0);' onclick='this.select();' style='width: 100%;font-size:14px;padding:10px;background: url(resources/pin_start.svg) no-repeat left top;background-size: 20px 35px;padding-left: 25px;'>				
+			<input id="pac-input2" type="text" placeholder="დანიშნულების მისამართი"  onfocus='setState(1);' onclick='this.select();' style='width: 100%;font-size:14px;padding:10px;background: url(resources/pin_end.svg) no-repeat left top;background-size: 20px 35px;padding-left: 25px;'>
 		</div>
 
 		<div id='on_call_menu' style='display:none;  background-color:white; float:left; width:75%;'>
@@ -95,7 +95,7 @@ td {
 			<center><img src='resources/taxi_icon.png'><br><br>თქვენი ტაქსი ადგილზეა<br><Br>
 			<a href='javascript: chamovdivar();' style='color:white; background-color:green; padding:10px; text-align:center; '>ჩამოვდივარ</a>
 			</center>
-			
+			<br><br>
 	    </div>
 
 		
@@ -116,12 +116,13 @@ td {
 		<div id='driver_info' style='position:fixed; bottom:30px; left:10%; height:120px; width:80%; z-index:252; color:gray; background-color:white; padding:10px; box-shadow: 4px 4px 23px 0px rgba(0,0,0,0.75); display:none; border-radius:10px;'></div>
 
 
-		<div id='end_screen' style='position:fixed; bottom:100px; left:15%; height:200px; width:200px; z-index:252; color:gray; background-color:white; padding:10px; box-shadow: 4px 4px 23px 0px rgba(0,0,0,0.75); display:none; border-radius:5px;'>
+		<div id='end_screen' style='position:fixed; bottom:100px; left:15%; width:200px; z-index:252; color:gray; background-color:white; padding:10px; box-shadow: 4px 4px 23px 0px rgba(0,0,0,0.75); display:none; border-radius:5px;'>
 
 			<Center><a href='Javascript: card_pay();' style='background-color:blue; border-radius:3px; padding:5px; color:white;'>ბარათით გადახდა</a></center><Br>
 			<div id='end_info'></div>
 			<Br><br><br>
 			<center><a href='Javascript: close_end_info();' style='border:1px solid gray; border-radius:3px; padding:10px; background-color:green; color:white;'>OK</a><center>
+			<Br><Br>
 
 		</div>
 
@@ -139,9 +140,13 @@ function close_end_info()
 	}
 </script>
 
-		<a id='call_but' style='position:fixed; bottom:0px; left:20%; height:100px; width:60%; z-index:252;' href='Javascript: call_taxi();'><img src='resources/gamodzaxeba.svg' style='width:210px; height:100px;'></a>
+<!--		<a id='call_but' style='position:fixed; bottom:0px; left:20%; height:100px; width:60%; z-index:252;' href='Javascript: call_taxi();'><img src='resources/gamodzaxeba.svg' style='width:210px; height:100px;'></a>-->
+	<a id='call_but' style='position:fixed; bottom:10px; left:20%; width:60%; z-index:252; background-color:#34e777; color:white; border:1px solid #27af55; border-radius:10px;' href='Javascript: call_taxi();'><center>გამოძახება</center></a>
 
-		<a href='Javascript: setme();' style='position:fixed; top:130px; right:5px; margin:5px; z-index:252; '><img id='cbut' src='resources/center.svg' style='width:50px; height:50px;'></a>
+
+
+
+		<a href='Javascript: setme();' style='position:fixed; top:120px; left:5px; margin:5px; z-index:252; '><img id='cbut' src='resources/center.svg' style='width:50px; height:50px;'></a>
 
 		<div id="bottom_menu" style=' width:210px; position:fixed; bottom:0px; left:80px; height:31px; z-index:251; background-color:#ffce00; display:none;'>
 			<div id='info_text' name='info_text' style=' float:right; color:white; padding:5px; '></div>
