--- a/www/index.html
+++ b/www/index.html
@@ -141,7 +141,7 @@ function close_end_info()
 </script>
 
 <!--		<a id='call_but' style='position:fixed; bottom:0px; left:20%; height:100px; width:60%; z-index:252;' href='Javascript: call_taxi();'><img src='resources/gamodzaxeba.svg' style='width:210px; height:100px;'></a>-->
-	<a id='call_but' style='position:fixed; bottom:10px; left:20%; width:60%; z-index:252; background-color:#34e777; color:white; border:1px solid #27af55; border-radius:10px;' href='Javascript: call_taxi();'><center>გამოძახება</center></a>
+	<a id='call_but' style='position:fixed;bottom: 20px;left: 15%;width:60%;z-index:252;background-color:#34e777;color:white;border: 2px solid #27af55;border-radius: 20px;padding: 15px;font-size: 18px;font-weight: bold;' href='Javascript: call_taxi();'><center>გამოძახება</center></a>
 
 
 
