--- a/www/index.html
+++ b/www/index.html
@@ -35,8 +35,8 @@
     color: white;
   }
 /*  border:2px solid #13ae48;  border-radius:4px;*/
-#pac-input{padding:4px;margin:0px; background-color:white; color:green; border:0px;}
-#pac-input2{  padding:4px;margin:0px;background-color:white; color:#e8b427; border:0px;}
+#pac-input{padding:4px;margin:0px; background-color:white; color:#27af55; border:0px; font-weight:Bold;}
+#pac-input2{  padding:4px;margin:0px;background-color:white; color:#e8b427; border:0px; font-weight:Bold;}
 
 #pac-input2:focus {
     background-color:#e8b427; 
