--- a/www/index.html
+++ b/www/index.html
@@ -180,13 +180,13 @@ function close_end_info()
 				<div id='login_page' style=' '>
 					<table>
 					  <tr>
-						<td style='font-size:12px;'>მობ# ან ელფოსტა:</td>
-						<td><input type='text' id='myname' name='myname' value='youuser' Placeholder="მობ. ან ელ-ფოსტა"
-								   size=10></td>
+						<!--<td style='font-size:12px;'>მობ# ან ელფოსტა:</td>-->
+						<td><input type='text' id='myname' name='myname' Placeholder="მობ. ან ელ-ფოსტა"
+								   ></td>
 					  </tr>
 					  <tr>
-						<td style='font-size:12px;'>პაროლი:</td>
-						<td><input type='password' id='mypass' name='mypass' value='yourpass' placeholder="პაროლი" size=10>
+						<!--<td style='font-size:12px;'>პაროლი:</td>-->
+						<td><input type='password' id='mypass' name='mypass' placeholder="პაროლი" >
 						</td>
 					</tr>
 					<tr>
