--- a/www/index.html
+++ b/www/index.html
@@ -199,7 +199,7 @@ function close_end_info()
 				</div>
 
 				<div id='loggedin_page' style=' display:none;'>
-					<div id='loggedin_info'></div>
+					<div id='loggedin_info' style='color:black;'> -- </div>
 					<a href='Javascript: logout();' style='background-color:white; border:1px solid gray; display:block; width:150px; color:black; padding:5px;'>გამოსვლა</a>
 				</div>
 				<br>
