--- a/www/index.html
+++ b/www/index.html
@@ -24,6 +24,7 @@
 </head>
 <style>
   body {
+  font-family:mainfont;
   background-color:white;
     color: black;
     margin: 0px;
@@ -31,12 +32,13 @@
   }
 
   a {
+   font-family:mainfont;
     text-decoration: none;
     color: white;
   }
 /*  border:2px solid #13ae48;  border-radius:4px;*/
-#pac-input{padding:4px;margin:0px; background-color:white; color:#27af55; border:0px; font-weight:Bold;}
-#pac-input2{  padding:4px;margin:0px;background-color:white; color:#e8b427; border:0px; font-weight:Bold;}
+#pac-input{padding:4px;margin:0px; background-color:white; color:#27af55; border:0px; font-weight:Bold;  font-family:mainfont;}
+#pac-input2{  padding:4px;margin:0px;background-color:white; color:#e8b427; border:0px; font-weight:Bold;  font-family:mainfont;}
 
 #pac-input2:focus {
     background-color:#e8b427; 
@@ -141,7 +143,7 @@ function close_end_info()
 </script>
 
 <!--		<a id='call_but' style='position:fixed; bottom:0px; left:20%; height:100px; width:60%; z-index:252;' href='Javascript: call_taxi();'><img src='resources/gamodzaxeba.svg' style='width:210px; height:100px;'></a>-->
-	<a id='call_but' style='position:fixed;bottom: 20px;left: 15%;width:60%;z-index:252;background-color:#34e777;color:white;border: 2px solid #27af55;border-radius: 20px;padding: 15px;font-size: 18px;font-weight: bold;' href='Javascript: call_taxi();'><center>გამოძახება</center></a>
+	<a id='call_but' style='position:fixed;bottom: 20px;left: 15%;width:60%;z-index:252;background-color:#34e777;color:white;border: 2px solid #27af55;border-radius: 20px; padding: 15px;font-size: 22px; font-weight: bold;  font-family:mainfont;' href='Javascript: call_taxi();'><center>გამოძახება</center></a>
 
 
 
