--- a/www/index.html
+++ b/www/index.html
@@ -42,12 +42,12 @@
 
 #pac-input2:focus {
     background-color:#e8b427; 
-	color:white;
+	color:black;
 }
 
 #pac-input:focus {
     background-color:#32e875;
-	color:white;
+	color:black;
 	
 }
 
