--- a/www/index.html
+++ b/www/index.html
@@ -109,11 +109,13 @@ td {
 
 		<div id='taxi_search_screen'  style='display:none; position:fixed; top:200px; left:10%;  width:80%; z-index:300; background-color:white; color:black; border-radius:10px; box-shadow: 4px 4px 23px 0px rgba(0,0,0,0.75); '>
 			<br>
-			<center><img src='resources/taxi_icon.png'><br><br>უახლოესი თავისუფალი ტაქსის ძიება</center>
+			<center>
+			<div id='savar_fasi'></div><Br>
+			<img src='resources/taxi_icon.png'><br><br>უახლოესი თავისუფალი ტაქსის ძიება</center>
 			<Br>
 		</div>
 
-		<div id='dirinfo' style='color:black; background-color:white; padding:10px;'></div>
+		<div id='dirinfo' style='color:black; background-color:white; padding:10px; display:none; position:fixed; bottom:200px; left:10%;  width:80%; z-index:300; background-color:white; color:black; border-radius:10px; box-shadow: 4px 4px 23px 0px rgba(0,0,0,0.75);'></div>
 
 		<div id='driver_info' style='position:fixed; bottom:30px; left:10%; height:120px; width:80%; z-index:252; color:gray; background-color:white; padding:10px; box-shadow: 4px 4px 23px 0px rgba(0,0,0,0.75); display:none; border-radius:10px;'></div>
 
