--- a/www/index.html
+++ b/www/index.html
@@ -9,7 +9,7 @@
 <head>
 
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-  <title>Prius Taxi</title>
+  <title>ML Taxi</title>
 <!--  <link href="vendor/bootstrap/css/bootstrap.css" rel="stylesheet">-->
   <link href="css/main.css" rel="stylesheet">
   <script type="text/javascript" charset="utf-8" src="cordova.js"></script>
