--- a/www/index.html
+++ b/www/index.html
@@ -120,12 +120,23 @@ td {
 		<div id='driver_info' style='position:fixed; bottom:30px; left:10%; height:140px; width:80%; z-index:252; color:gray; background-color:white; padding:10px; box-shadow: 4px 4px 23px 0px rgba(0,0,0,0.75); display:none; border-radius:10px;'></div>
 
 
-		<div id='end_screen' style='position:fixed; bottom:150px; left:15%; width:200px; z-index:252; color:gray; background-color:white; padding:10px; box-shadow: 4px 4px 23px 0px rgba(0,0,0,0.75); display:none; border-radius:5px;'>
+		<div id='end_screen' style='position:fixed; bottom:200px; left:15%; width:200px; z-index:252; color:gray; background-color:white; padding:10px; box-shadow: 4px 4px 23px 0px rgba(0,0,0,0.75); display:none; border-radius:5px;'>
 
-			<Center><a href='Javascript: card_pay();' style='background-color:blue; border-radius:3px; padding:10px; color:white; border-radius:5px;'>ბარათით გადახდა</a></center><Br>
+			<Center>
+			<a href='Javascript: card_pay();' style='background-color:blue; border-radius:3px; padding:10px; color:white; border-radius:5px;'>ბარათით გადახდა</a><Br>
 			<div id='end_info'></div>
 			<Br><br>
-			<center><a href='Javascript: close_end_info();' style='border:1px solid gray; border-radius:3px; padding:10px; background-color:green; color:white;'>OK</a><center>
+შესაფასეთ ჩვენი მომსახურება<br>
+<table><tr>
+<Td><a href='Javascript: vote(1, 0);'><img id='vote1' src='resources/vote_empty.png' width=40px></a></td>
+<Td><a href='Javascript: vote(2, 0);'><img id='vote2' src='resources/vote_empty.png' width=40px></a></td>
+<Td><a href='Javascript: vote(3, 0);'><img id='vote3' src='resources/vote_empty.png' width=40px></a></td>
+<Td><a href='Javascript: vote(4, 0);'><img id='vote4' src='resources/vote_empty.png' width=40px></a></td>
+<Td><a href='Javascript: vote(5, 0);'><img id='vote5' src='resources/vote_empty.png' width=40px></a></td></tr></table>
+			<br><br>
+			<a href='Javascript: close_end_info();' style='border:1px solid gray; border-radius:3px; padding:10px; background-color:green; color:white;'>OK</a>
+			
+			<center>
 			<Br><Br>
 
 		</div>
