--- a/www/index.html
+++ b/www/index.html
@@ -117,7 +117,11 @@ td {
 
 		<div id='dirinfo' style='color:black; background-color:white; padding:10px; display:none; position:fixed; top:120px; left:20%;  width:70%; z-index:300; background-color:white; color:black; border-radius:10px; box-shadow: 4px 4px 23px 0px rgba(0,0,0,0.75);'></div>
 
-		<div id='driver_info' style='position:fixed; bottom:30px; left:10%; height:140px; width:80%; z-index:252; color:gray; background-color:white; padding:10px; box-shadow: 4px 4px 23px 0px rgba(0,0,0,0.75); display:none; border-radius:10px;'></div>
+		<div id='driver_info' style='position:fixed; bottom:30px; left:7%; height:140px; width:80%; z-index:252; color:gray; background-color:white; padding:10px; box-shadow: 4px 4px 23px 0px rgba(0,0,0,0.75); display:none; border-radius:10px;'>
+			<a href='Javascript: driver_info_up();' style='position:absolute; left:20px; top:-10px; z-index:253;'><img src='resources/up.png' width=20px></a>
+			<div id='driver_info_text'>
+			</div>
+		</div>
 
 
 		<div id='end_screen' style='position:fixed; bottom:200px; left:15%; width:200px; z-index:252; color:gray; background-color:white; padding:10px; box-shadow: 4px 4px 23px 0px rgba(0,0,0,0.75); display:none; border-radius:5px;'>
