--- a/www/index.html
+++ b/www/index.html
@@ -125,7 +125,7 @@ td {
 		</div>
 
 
-		<div id='end_screen' style='position:fixed; bottom:200px; left:15%; width:200px; z-index:252; color:gray; background-color:white; padding:10px; box-shadow: 4px 4px 23px 0px rgba(0,0,0,0.75); display:none; border-radius:5px;'>
+		<div id='end_screen' style='position:fixed; bottom:200px; left:15%; width:200px; z-index:252; color:gray; background-color:white; padding:10px; box-shadow: 4px 4px 23px 0px rgba(0,0,0,0.75); display:none; border-radius:5px; height:150px;'>
 
 			<Center>
 			<a href='Javascript: card_pay();' style='background-color:blue; border-radius:3px; padding:10px; color:white; border-radius:5px;'>ბარათით გადახდა</a><Br>
@@ -139,7 +139,7 @@ td {
 <Td><a href='Javascript: vote(4, 0);'><img id='vote4' src='resources/vote_empty.png' width=40px></a></td>
 <Td><a href='Javascript: vote(5, 0);'><img id='vote5' src='resources/vote_empty.png' width=40px></a></td></tr></table>
 			<br><br>
-			<a href='Javascript: close_end_info();' style='border:1px solid gray; border-radius:3px; padding:10px; background-color:green; color:white;'>OK</a>
+			<a href='Javascript: close_end_info();' style='border:1px solid gray; border-radius:3px; padding:10px; background-color:green; color:white;'>დახურვა</a>
 			
 			<center>
 			<Br><Br>
