--- a/www/index.html
+++ b/www/index.html
@@ -157,7 +157,7 @@ td {
 
 
 <!--		<a id='call_but' style='position:fixed; bottom:0px; left:20%; height:100px; width:60%; z-index:252;' href='Javascript: call_taxi();'><img src='resources/gamodzaxeba.svg' style='width:210px; height:100px;'></a>-->
-	<a id='call_but' style='position:fixed;bottom: 20px;left: 15%;width:60%;z-index:252;background-color:#34e777;color:white;border: 2px solid #27af55;border-radius: 20px; padding: 15px;font-size: 22px; font-weight: bold;  font-family:mainfont;' href='Javascript: call_taxi();'><center>გამოძახება</center></a>
+	<a id='call_but' style='position:fixed;bottom: 20px;left: 5%;width:90%;z-index:252;background-color:#636469;color:#fdf00b;border: 2px solid #fdf00b;border-radius: 20px; padding: 15px;font-size: 22px; font-weight: bold;  font-family:mainfont;' href='Javascript: call_taxi();'><center>გამოძახება</center></a>
 
 
 
