--- a/www/index.html
+++ b/www/index.html
@@ -160,7 +160,7 @@ td {
 
 
 <!--		<a id='call_but' style='position:fixed; bottom:0px; left:20%; height:100px; width:60%; z-index:252;' href='Javascript: call_taxi();'><img src='resources/gamodzaxeba.svg' style='width:210px; height:100px;'></a>-->
-	<a id='call_but' style='position:fixed;bottom: 20px;left: 0%;width:90%;z-index:252;background-color:#636469;color:#fdf00b;border: 2px solid #fdf00b;border-radius: 20px; padding: 15px;font-size: 26px; font-weight: bold;  font-family:maincaps;' href='Javascript: call_taxi();'><center><table><tr><td><img src='resources/taxi_30.png' height=30px></td><td style='font-size:26px;'> გამოძახება</td></tr></table></center></a>
+	<a id='call_but' style='position:fixed;bottom: 20px;left: 0%;width:90%;z-index:252;background-color:#636469;color:#fdf00b;border: 2px solid #fdf00b;border-radius: 20px; padding: 15px;font-size: 26px; font-weight: bold;  font-family:maincaps;' href='Javascript: call_taxi();'><center><table><tr><td valign=middle><img src='resources/taxi_30.png' height=30px></td><td  valign=middle style='font-size:26px;'> გამოძახება</td></tr></table></center></a>
 
 
 
@@ -196,32 +196,31 @@ td {
 					<table>
 					  <tr>
 						<!--<td style='font-size:12px;'>მობ# ან ელფოსტა:</td>-->
-						<td><input type='text' id='myname' name='myname' Placeholder="მობ. ან ელ-ფოსტა"
-								   ></td>
+						<td><input type='text' id='myname' name='myname' Placeholder="მობ. ან ელ-ფოსტა" style='height:25px; text-align:center; width:180px; border-radius:3px; color:#606062; border:1px solid #606062;'></td>
 					  </tr>
 					  <tr>
 						<!--<td style='font-size:12px;'>პაროლი:</td>-->
-						<td><input type='password' id='mypass' name='mypass' placeholder="პაროლი" >
+						<td><input type='password' id='mypass' name='mypass' placeholder="პაროლი" style='height:25px; text-align:center; width:180px; border-radius:3px; color:#606062; border:1px solid #606062;'>
 						</td>
 					</tr>
 					<tr>
-						<td colspan=2 align=center><a href='Javascript: saveuser();' style='background-color:white; border:1px solid gray; display:block; color:black; padding:5px; font-size:14px;'>შესვლა</a>
+						<td colspan=2 align=center><a href='Javascript: saveuser();' style='display:block; background-color:white; width:170px; border-radius:3px; color:#606062; border:1px solid #606062; font-size:14px; padding:5px;'>შესვლა</a>
 						</td>
 					  </tr>
 					</table>
 
-					<a href='#' onclick="Javascript: open_reg_window();" style='background-color:white; border:1px solid gray; display:block; width:150px; color:black; padding:5px;'>რეგისტრაცია</a>
+					<a href='#' onclick="Javascript: open_reg_window();" style='display:block; background-color:white; width:170px; border-radius:3px; color:#606062; border:1px solid #606062; padding:5px;'>რეგისტრაცია</a>
 				</div>
 
 				<div id='loggedin_page' style=' display:none;'>
 					<div id='loggedin_info' style='color:black;'> -- </div>
-					<a href='Javascript: logout();' style='background-color:white; border:1px solid gray; display:block; width:150px; color:black; padding:5px;'>გამოსვლა</a>
+					<a href='Javascript: logout();' style='width:180px; border-radius:3px; color:#606062; border:1px solid #606062;'>გამოსვლა</a>
 				</div>
-				<br>
+
 
 
 				<a href='Javascript: show_map();' style='position:absolute; bottom:-37px; left:50%; display:block; margin-left:-45px; width:90px; color:black;  '><img src='resources/settings_1.png' width=90px></a>
-				<Br><Br>
+<br>
 				</center>
 
 
