--- a/www/index.html
+++ b/www/index.html
@@ -72,7 +72,7 @@ td {
 <a style='position:fixed; top:0px; left:50%; z-index:1000; background-color:white; font-size:12px; margin-left:-45px; text-align:center; color:black; border-radius:5px;' href='Javascript: show_settings();'><img src='resources/settings_1.png' width=90px><br>პარამეტრები</a>
       
 	<!--                                          zeda meniu -->
-	<div style='position:fixed;box-shadow: rgba(0, 0, 0, 0.75) 0px 4px 23px 0px;left:0px;top:0px;width:100%; z-index:211; background-color:white;'><!--background-color:#ffce00;-->
+	<div style='position:fixed; left:0px;bottom:0px;width:100%; z-index:211; background-color:white;'><!--background-color:#ffce00;-->
 		<div style='width:100%; height:15px;'></div>
 		
 		
@@ -93,7 +93,7 @@ td {
 
   <script src="js/maps.js"></script>
 
-	<div id='charcho' style='position:fixed; left:0px; top:50px; width:365px; height:600px;  z-index:1;'>
+	<div id='charcho' style='position:fixed; left:0px; top:0px; width:365px; height:600px;  z-index:1;'>
 		<div id='mainw' style='position:absolute; left:0px; top:0px; width:600px; height:600px; '>
 			<!--																	mtavari ruka -->
 			<div id="gmap"  style='position:absolute; left:0px; top:0px; height:600px; width:365px; display:block;'></div>
@@ -160,7 +160,7 @@ td {
 
 
 <!--		<a id='call_but' style='position:fixed; bottom:0px; left:20%; height:100px; width:60%; z-index:252;' href='Javascript: call_taxi();'><img src='resources/gamodzaxeba.svg' style='width:210px; height:100px;'></a>-->
-	<a id='call_but' style='position:fixed;bottom: 20px;left: 0%;width:90%;z-index:252;background-color:#636469;color:#fdf00b;border: 2px solid #fdf00b;border-radius: 20px; padding: 15px;font-size: 26px; font-weight: bold;  font-family:maincaps;' href='Javascript: call_taxi();'><center><table><tr><td valign=middle><img src='resources/taxi_30.png' height=30px></td><td  valign=middle style='font-size:26px;'> გამოძახება</td></tr></table></center></a>
+	<a id='call_but' style='position:fixed;bottom: 90px;left: 0%;width:90%;z-index:252;background-color:#636469;color:#fdf00b;border: 2px solid #fdf00b;border-radius: 20px; padding: 15px;font-size: 26px; font-weight: bold;  font-family:maincaps;' href='Javascript: call_taxi();'><center><table><tr><td valign=middle><img src='resources/taxi_30.png' height=30px></td><td  valign=middle style='font-size:26px;'> გამოძახება</td></tr></table></center></a>
 
 
 
